--- a/navbar.yml
+++ b/navbar.yml
@@ -1,7 +1,15 @@
 website:
   navbar:
     logo: "logo.png"
-    background: primary
+    background: "#C0D6E4"
+    text-color: "#333"  # Color del texto
+    height: "90px"  # Altura del Navbar
+    box-shadow: "0px 2px 5px rgba(0, 0, 0, 0.1)"  # Sombra ligera
+    padding: "15px"  # Espaciado interno
+    border-radius: "5px"  # Bordes redondeados
+    position: "fixed"  # Navbar fijo en la parte superior
+    top: "0"
+    transition: "background-color 0.3s ease, color 0.3s ease"  # Transición suave
 
     left:
       - text: Inicio
@@ -10,6 +18,10 @@ website:
         href: curso.qmd
       - text: Galeria
         href: galeria.qmd
+
+    right:
+      - text: "Iniciar Sesión"
+        href: "login.qmd"
 
     tools:
 
